# bazel_ts_starter

./: .gitignore  WORKSPACE.bazel
src/compute_sum/: BUILD.bazel  index.ts  tsconfig.json
src/one/: BUILD.bazel
src/two/: BUILD.bazel
